fix: spacing, line-height and other

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,7 @@
   .swiper {
     width: 100%;
     height: 100%;
+    display: flex;
   }
 
   .swiper-slide {
